# pull_facebook_data_for_good

./: .config  .gitignore  LICENSE  Makefile  README.md  clean_up.py  colocation.py  colocation_datsets.csv  credentials.py  driver.py  mobility.py  mobility_datsets.csv  population.py  population_datsets.csv  pull.py  pull_colocation.py  pull_fb.py  pull_mobility.py  pull_population.py  pyproject.toml  setup.py  test.csv  test_colocation.py  test_credentials.py  test_mobility.py  test_utils.py  tox.ini  url.py  utils.py
.github/workflows/: ci.yml  cov.yml
pull_fb/: auth.py  collection.py  credentials.py  driver.py  pull_fb.py  url.py  utils.py
tests/: test_check_auth_headers.py  test_credentials.py  test_driver.py  test_get_file_dataset_ids.py  test_get_file_dates.py  test_get_outfn.py  test_set_file_dataset_ids.py  test_unzip_data.py  test_url.py  test_utils.py  test_write_zipfile.py  utils.py
